--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -16,12 +16,15 @@ jobs:
       contents: read
       id-token: write
       pages: write
+    environment:
+      name: github-pages
+      url: ${{steps.deployment.outputs.page_url}}
     steps:
       - uses: actions/checkout@v6
-      - uses: actions/configure-pages@v6
+      - uses: actions/configure-pages@v5
       - run: cp internal/schema/*.json pages/
       - uses: actions/upload-pages-artifact@v4
         with:
           path: pages
-      - id: deployment
-        uses: actions/deploy-pages@v4
+      - uses: actions/deploy-pages@v4
+        id: deployment
