--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -9,7 +9,12 @@ builds:
   - env:
       - CGO_ENABLED=0
     targets:
-      - go_first_class
+      - darwin_amd64
+      - darwin_arm64
+      - linux_386
+      - linux_amd64
+      - linux_arm
+      - linux_arm64
     flags:
       - -trimpath
     ldflags:
@@ -17,11 +22,6 @@ builds:
 
 changelog:
   disable: true
-
-archives:
-  - format_overrides:
-      - goos: windows
-        formats: zip
 
 checksum:
   name_template: checksums.sha256.txt
